# redis-monitor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  package.json
src/: database.hpp  monitor.hpp  spawned_loop.hpp  timeUtils.hpp  tools.hpp
templates/: index.html.tpl
tests/: test.cpp  unit-database.cpp  unit-monitor.cpp  unit-tic.cpp
views/: index.html
